--- a/hillshade/index.html
+++ b/hillshade/index.html
@@ -19,6 +19,7 @@
             bottom: 0;
             width: 100%;
         }
+
         .listing-group {
             font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
             position: absolute;
@@ -33,161 +34,155 @@
 </head>
 
 <body>
+<div id='map'></div>
+<table id="listing-group" class="listing-group">
+    <tr>
+        <td><label for="background-color-picker">background-color</label></td>
+        <td><input type="color" id="background-color-picker" value="#808080" style="width: 100%" /></td>
+    </tr>
+    <tr>
+        <td><label for="hillshade-highlight-color-picker">hillshade-highlight-color</label></td>
+        <td><input type="color" id="hillshade-highlight-color-picker" value="#FFFFFF" style="width: 100%" /></td>
+    </tr>
+    <tr>
+        <td><label for="hillshade-highlight-opacity-slider">highlight opacity</label></td>
+        <td><input type="range" id="hillshade-highlight-opacity-slider" min="0" max="1" step="0.01" value="1.0" /></td>
+    </tr>
+    <tr>
+        <td><label for="hillshade-shadow-color-picker">hillshade-shadow-color</label></td>
+        <td><input type="color" id="hillshade-shadow-color-picker" value="#000000" style="width: 100%" /></td>
+    </tr>
+    <tr>
+        <td><label for="hillshade-shadow-opacity-slider">shadow opacity</label></td>
+        <td><input type="range" id="hillshade-shadow-opacity-slider" min="0" max="1" step="0.01" value="1.0" /></td>
+    </tr>
+    <tr>
+        <td><label for="hillshade-accent-color-picker">hillshade-accent-color</label></td>
+        <td><input type="color" id="hillshade-accent-color-picker" value="#000000" style="width: 100%" /></td>
+    </tr>
+    <tr>
+        <td><label for="hillshade-accent-opacity-slider">accent opacity</label></td>
+        <td><input type="range" id="hillshade-accent-opacity-slider" min="0" max="1" step="0.01" value="1.0" /></td>
+    </tr>
+    <tr>
+        <td><label for="hillshade-illumination-altitude-slider">hillshade-illumination-altitude</label></td>
+        <td><input type="range" id="hillshade-illumination-altitude-slider" min="0" max="90" step="1" value="45" /></td>
+    </tr>
 
-    <div id='map'></div>
-    <table id="listing-group" class="listing-group">
-        <tr><td><label for="background-color-picker">background-color</label></td><td><input type="color" id="background-color-picker" value="#808080" style="width: 100%"/></td></tr>
-        <tr><td><label for="hillshade-highlight-color-picker">hillshade-highlight-color</label></td><td><input type="color" id="hillshade-highlight-color-picker" value="#FFFFFF" style="width: 100%"/></td></tr>
-        <tr><td><label for="hillshade-highlight-opacity-slider">highlight opacity</label></td><td><input type="range" id="hillshade-highlight-opacity-slider" min="0" max="1" step="0.01" value="1.0" /></td></tr>
-        <tr><td><label for="hillshade-shadow-color-picker">hillshade-shadow-color</label></td><td><input type="color" id="hillshade-shadow-color-picker" value="#000000" style="width: 100%"/></td></tr>
-        <tr><td><label for="hillshade-shadow-opacity-slider">shadow opacity</label></td><td><input type="range" id="hillshade-shadow-opacity-slider" min="0" max="1" step="0.01" value="1.0" /></td></tr>
-        <tr><td><label for="hillshade-accent-color-picker">hillshade-accent-color</label></td><td><input type="color" id="hillshade-accent-color-picker" value="#000000" style="width: 100%"/></td></tr>
-        <tr><td><label for="hillshade-accent-opacity-slider">accent opacity</label></td><td><input type="range" id="hillshade-accent-opacity-slider" min="0" max="1" step="0.01" value="1.0" /></td></tr>
-        <tr><td><label for="hillshade-illumination-altitude-slider">hillshade-illumination-altitude</label></td><td><input type="range" id="hillshade-illumination-altitude-slider" min="0" max="90" step="1" value="45" /></td></tr>
-        
-        <tr><td>hillshade-method<br></td><td>
-            <select id="method-selector">
+    <tr>
+        <td>hillshade-method<br></td>
+        <td>
+            <select id="hillshade-method-selector">
                 <option value="standard">standard</option>
                 <option value="basic">basic</option>
                 <option value="combined">combined</option>
                 <option value="igor">igor</option>
                 <option value="multidirectional">multidirectional</option>
             </select>
-        </td></tr>
-    </table>
-    <script>
-        function setHillshadeFromUi() {
-            const getColor = (name) => {
-                const v = document.getElementById(`hillshade-${name}-color-picker`).value;
-                const o = +document.getElementById(`hillshade-${name}-opacity-slider`).value;
-                return v + Math.round(255 * o).toString(16).padStart(2, '0');
-            }
+        </td>
+    </tr>
+</table>
 
-            try {
-                map.removeLayer('background');
-            } catch (e) { }
-            styles['background'].paint['background-color'] = document.getElementById('background-color-picker').value;
-            map.addLayer(styles['background']);
-            try {
-                map.removeLayer('hillshade');
-            } catch (e) { }
-            const method = document.getElementById('method-selector').value;
-            if (method != 'multidirectional') {
-                styles[method].paint['hillshade-shadow-color'] = getColor('shadow');
-                styles[method].paint['hillshade-highlight-color'] = getColor('highlight');
-                styles[method].paint['hillshade-accent-color'] = getColor('accent');
-            }
-            styles[method].paint['hillshade-illumination-altitude'] = +document.getElementById('hillshade-illumination-altitude-slider').value;
-            map.addLayer(styles[method]);
+<script>
+    function setHillshadeFromUi() {
+        const getColor = (name) => {
+            const v = document.getElementById(`hillshade-${name}-color-picker`).value;
+            const o = +document.getElementById(`hillshade-${name}-opacity-slider`).value;
+            return v + Math.round(255 * o).toString(16).padStart(2, '0');
         }
 
-        const map = window.map = new maplibregl.Map({
-            container: 'map',
-            zoom: 6,
-            center: [170, -42],
-            pitch: 0,
-            renderWorldCopies: false,
-            hash: true,
-            style: {
-                version: 8,
-                sources: {
-                    terrainSource: {
-                        type: 'raster-dem',
-                        tiles: ['https://basemaps.linz.govt.nz/v1/tiles/elevation/WebMercatorQuad/{z}/{x}/{y}.png?api=c01jp93wy1d0hjwwpeksyf0fntz&pipeline=terrain-rgb'],
-                        tileSize: 256
-                    },
-                    hillshadeSource: {
-                        type: 'raster-dem',
-                        tiles: ['https://basemaps.linz.govt.nz/v1/tiles/elevation/WebMercatorQuad/{z}/{x}/{y}.png?api=c01jp93wy1d0hjwwpeksyf0fntz&pipeline=terrain-rgb'],
-                        tileSize: 256
-                    }
-                },
+        try {
+            map.removeLayer('background');
+        } catch (e) { }
 
-                layers: [
-                    {
-                        id: 'background',
-                        type: 'background',
-                        paint: {
-                            "background-color": "#808080"
-                        }
-                    }
-                ],
-                terrain: {
-                    source: 'terrainSource',
-                    exaggeration: 1
-                }
-            },
-            maxZoom: 18,
-            maxPitch: 85
-        });
-
-
-        styles = {};
-        styles['background'] = {
+        const background_style = {
             id: 'background',
             type: 'background',
             paint: {
-                "background-color": "#808080"
+                "background-color": document.getElementById('background-color-picker').value
             }
         };
-        styles['igor'] = {
-            id: 'hillshade',
-            type: 'hillshade',
-            source: 'hillshadeSource',
-            paint: {
-                'hillshade-method': 'igor'
-            }
-        };
-        styles['combined'] = {
-            id: 'hillshade',
-            type: 'hillshade',
-            source: 'hillshadeSource',
-            paint: {
-                'hillshade-method': 'combined'
-            }
-        };
-        styles['standard'] = {
-            id: 'hillshade',
-            type: 'hillshade',
-            source: 'hillshadeSource',
-            paint: {
-                'hillshade-method': 'standard'
-            }
-        };
-        styles['basic'] = {
-            id: 'hillshade',
-            type: 'hillshade',
-            source: 'hillshadeSource',
-            paint: {
-                'hillshade-method': 'basic'
-            }
-        };
-        styles['multidirectional'] = {
-            id: 'hillshade',
-            type: 'hillshade',
-            source: 'hillshadeSource',
-            paint: {
-                'hillshade-highlight-color': ['#FF4000', '#FFFF00', '#40ff00', '#00FF80'],
-                'hillshade-shadow-color': ['#00bfff', '#0000ff', '#bf00ff', '#FF0080'],
-                'hillshade-illumination-direction': [270,315,0,45],
-                'hillshade-method': 'multidirectional'
-            }
-        };
+        map.addLayer(background_style);
 
-        map.on('load', () => {
-            document.getElementById('background-color-picker').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('hillshade-highlight-color-picker').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('hillshade-shadow-color-picker').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('hillshade-accent-color-picker').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('hillshade-highlight-opacity-slider').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('hillshade-shadow-opacity-slider').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('hillshade-accent-opacity-slider').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('hillshade-illumination-altitude-slider').addEventListener('change', setHillshadeFromUi);
-            document.getElementById('method-selector').addEventListener('change', setHillshadeFromUi);
-            setHillshadeFromUi();
-        });
+        try {
+            map.removeLayer('hillshade');
+        } catch (e) { }
 
-    </script>
+        const method = document.getElementById('hillshade-method-selector').value;
+        let hillshade_style = {
+            id: 'hillshade',
+            type: 'hillshade',
+            source: 'hillshadeSource',
+            paint: {
+                'hillshade-method': method,
+                'hillshade-illumination-altitude': +document.getElementById('hillshade-illumination-altitude-slider').value,
+                'hillshade-shadow-color': getColor('shadow'),
+                'hillshade-highlight-color': getColor('highlight'),
+                'hillshade-accent-color': getColor('accent')
+            }
+        }
+        if (method == 'multidirectional') {
+            hillshade_style.paint['hillshade-highlight-color'] = ['#FF4000', '#FFFF00', '#40ff00', '#00FF80'];
+            hillshade_style.paint['hillshade-shadow-color'] = ['#00bfff', '#0000ff', '#bf00ff', '#FF0080'];
+            hillshade_style.paint['hillshade-illumination-direction'] = [270, 315, 0, 45];
+        }
+        map.addLayer(hillshade_style);
+    }
+
+    const map = window.map = new maplibregl.Map({
+        container: 'map',
+        zoom: 6,
+        center: [170, -42],
+        pitch: 0,
+        renderWorldCopies: false,
+        hash: true,
+        style: {
+            version: 8,
+            sources: {
+                terrainSource: {
+                    type: 'raster-dem',
+                    tiles: ['https://basemaps.linz.govt.nz/v1/tiles/elevation/WebMercatorQuad/{z}/{x}/{y}.png?api=c01jp93wy1d0hjwwpeksyf0fntz&pipeline=terrain-rgb'],
+                    tileSize: 256
+                },
+                hillshadeSource: {
+                    type: 'raster-dem',
+                    tiles: ['https://basemaps.linz.govt.nz/v1/tiles/elevation/WebMercatorQuad/{z}/{x}/{y}.png?api=c01jp93wy1d0hjwwpeksyf0fntz&pipeline=terrain-rgb'],
+                    tileSize: 256
+                }
+            },
+
+            layers: [
+                {
+                    id: 'background',
+                    type: 'background',
+                    paint: {
+                        "background-color": "#808080"
+                    }
+                }
+            ],
+            terrain: {
+                source: 'terrainSource',
+                exaggeration: 1
+            }
+        },
+        maxZoom: 18,
+        maxPitch: 85
+    });
+
+    map.on('load', () => {
+        document.getElementById('background-color-picker').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-highlight-color-picker').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-shadow-color-picker').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-accent-color-picker').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-highlight-opacity-slider').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-shadow-opacity-slider').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-accent-opacity-slider').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-illumination-altitude-slider').addEventListener('change', setHillshadeFromUi);
+        document.getElementById('hillshade-method-selector').addEventListener('change', setHillshadeFromUi);
+        setHillshadeFromUi();
+    });
+
+</script>
 
 </body>
 
