test of triggerTileRefresh

--- a/live_tiles/index.html
+++ b/live_tiles/index.html
@@ -42,6 +42,7 @@ var map = window.map = new maplibregl.Map({
     maxZoom: 18,
     maxPitch: 85
 });
+//a = setInterval(function () {map.triggerTileRefresh(1021,1022,11, 'number');}, 1000);
 </script>
 
 </body>
