switch to globe projection

--- a/color_relief/index.html
+++ b/color_relief/index.html
@@ -205,7 +205,8 @@ var style = {
                     'hillshade-exaggeration': 0.33
                 }
             }
-        ]
+        ],
+        projection: {type: 'globe'}
     };
 function setColorReliefFromUi() {
     const color_ramp_name = document.getElementById('color-ramp-selector').value;
