--- a/color_relief/index.html
+++ b/color_relief/index.html
@@ -178,8 +178,9 @@ colorramps['rgbk'] = [
                     ["linear"],
                     ["elevation"],
                     0, '#f00',
-                    1200, '#0f0',
-                    2400, '#00f',
+                    800, '#0f0',
+                    1600, '#00f',
+                    2400, '#fff',
                     3724, 'black'
                 ];
 var style = {
